--- a/my_web/src/style.css
+++ b/my_web/src/style.css
@@ -61,11 +61,11 @@
 
 .begin {
 	width: 100%;
-	height: 950px;
+	height: 1100px;
 	position: relative;
 	margin: 0;
 	background-image: url(../public/img/phone.jpg);
-	background-size: 150%;
+	background-size: 230%;
 }
 
 .glass {
@@ -85,6 +85,15 @@
 	flex-direction: column;
 	width: 100%;
 	margin-top: 6rem;
+}
+
+.exploreLink {
+	text-decoration: none; /* Removes the underline from the link */
+	color: inherit; /* Ensures that the link inherits the text color from the parent */
+	display: block; /* Ensures it behaves like a block element */
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
 
 .exploreGlass {
@@ -687,10 +696,6 @@ h3 {
 		padding: 28px;
 	}
 
-	.exploreGlass {
-		width: 70%;
-	}
-
 	.pageBegin {
 		flex-direction: row;
 		margin-bottom: 30px;
@@ -714,6 +719,10 @@ h3 {
 	.exploreGlass {
 		width: 40%;
 		margin-top: 10%;
+	}
+
+	.exploreLink {
+		justify-content: flex-start;
 	}
 
 	.photo {
